sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:15: error: value || is not a member of Int
       if(ecart=9 || ecart=10)
                  ^AlgCombSort11:15: error: type mismatch;
 found   : Unit
 required: Boolean
       if(ecart=9 || ecart=10)
               ^